--- a/public/styles.css
+++ b/public/styles.css
@@ -10,9 +10,9 @@ h1 {
 }
 img {
     object-fit: cover;
-    width: 100%;
-    height: 100%;
     border: solid 5px #5bccf6;
+    width: 30vw;
+    height: 40vh;
 }
 .grid-element {
     display: grid;
@@ -33,12 +33,60 @@ input {
     background-color: #5bccf6;
 }
 
-#input3 {
-    background-color: #fcde67;
+#file {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
 }
+
+.inputfile + label {
+    font-size: 1.25em;
+    font-weight: 700;
+    background-color: #5bccf6;
+    display: inline-block;
+    margin: 10px;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+    background-color: red;
+}
+
+.inputfile + label {
+    cursor: pointer; /* "hand" cursor */
+}
+
+/* .inputfile:focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+} */
 
 button {
     background-color: #5bccf6;
     border: none;
     font-size: 18px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: red;
+}
+span {
+    padding: 10px;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
+    .grid-element {
+        grid-template-columns: 1fr;
+    }
+
+    img {
+        object-fit: cover;
+        border: solid 5px #5bccf6;
+        width: 40vw;
+        height: 15vh;
+    }
 }
