--- a/public/styles.css
+++ b/public/styles.css
@@ -108,6 +108,26 @@ span {
     height: 100%;
     background-color: #5bcdf6c2;
 }
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+.next, .previous {
+    background-color: #04aa6d;
+    color: white;
+}
+
+
+
 /* modal */
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
